--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -16,6 +16,12 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en-US</string>
+		<string>ja-KS</string>
+		<string>ja-JP</string>
+	</array>
 	<key>CFBundleName</key>
 	<string>miria</string>
 	<key>CFBundlePackageType</key>
