--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,14 @@ dependencies:
   mfm_parser: ^1.0.3
   flutter_svg: ^2.0.6
   json5: ^0.8.0
+  slang: ^3.18.1
+  slang_flutter: ^3.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   flutter_lints: ^2.0.0
   auto_route_generator: ^6.0.0
   build_runner: ^2.3.3
@@ -63,6 +66,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.2
+  slang_build_runner: ^3.18.0
 
 flutter:
   uses-material-design: true
@@ -71,6 +75,8 @@ flutter:
     - assets/
     - assets/fonts/
     - assets/images/
+    - assets/i18n/
+    - assets/i18n/misskey/
 
 fonts:
   - family: KosugiMaru
