--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
             distribution: 'zulu'
             java-version: '11'
             cache: 'gradle'
-      
+
 
         - name: Cache pubspec dependencies
           uses: actions/cache@v2
@@ -46,59 +46,59 @@ jobs:
         - name: Flutter pub get
           run: flutter pub get
 
-        - name: Initialize git config
-          run: |
-            git config --local user.name $GIT_USER_NAME
-            git config --local user.email $GIT_USER_EMAIL
+        # - name: Initialize git config
+        #   run: |
+        #     git config --local user.name $GIT_USER_NAME
+        #     git config --local user.email $GIT_USER_EMAIL
 
-        - name: Bump up version
-          run: |
-            flutter pub run cider bump build --bump-build
-            echo "BUMP_VERSION=$(flutter pub run cider version)" >> $GITHUB_ENV
+        # - name: Bump up version
+        #   run: |
+        #     flutter pub run cider bump build --bump-build
+        #     echo "BUMP_VERSION=$(flutter pub run cider version)" >> $GITHUB_ENV
 
-        - name: Commit and push pubspec.yaml
-          run: |
-              git add -u pubspec.yaml
-              echo "Bumped version number to $BUMP_VERSION" | git commit --file=-
-              git push
+        # - name: Commit and push pubspec.yaml
+        #   run: |
+        #       git add -u pubspec.yaml
+        #       echo "Bumped version number to $BUMP_VERSION" | git commit --file=-
+        #       git push
 
-        - name: Run flutter test with coverage
-          run: flutter test --coverage --coverage-path=~/coverage/lcov.info
-          
-        - name: Extract App Store Connect API Private Key in ./private_keys
-          env:
-              APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-              APPLE_API_AUTHKEY_P8_BASE64: ${{ secrets.APPLE_API_AUTHKEY_P8_BASE64 }}
-          run: |
-              mkdir ./private_keys
-              echo -n "$APPLE_API_AUTHKEY_P8_BASE64" | base64 --decode --output ./private_keys/AuthKey_$APPLE_API_KEY_ID.p8
+        # - name: Run flutter test with coverage
+        #   run: flutter test --coverage --coverage-path=~/coverage/lcov.info
 
-        - name: Create archive file
-          run: flutter build ipa --no-tree-shake-icons  --release --no-codesign
+        # - name: Extract App Store Connect API Private Key in ./private_keys
+        #   env:
+        #       APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+        #       APPLE_API_AUTHKEY_P8_BASE64: ${{ secrets.APPLE_API_AUTHKEY_P8_BASE64 }}
+        #   run: |
+        #       mkdir ./private_keys
+        #       echo -n "$APPLE_API_AUTHKEY_P8_BASE64" | base64 --decode --output ./private_keys/AuthKey_$APPLE_API_KEY_ID.p8
 
-        - name: Release by fastlane
-          env:
-            APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-            APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
-            MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            MATCH_REPOSITORY_ACCESS_TOKEN: ${{ secrets.MATCH_REPOSITORY_ACCESS_TOKEN }}
-            MATCH_REPOSITORY_USERNAME: ${{ secrets.MATCH_REPOSITORY_USERNAME }}
-          run: |
-            cd ios
-            bundle install
-            fastlane release
+        # - name: Create archive file
+        #   run: flutter build ipa --no-tree-shake-icons  --release --no-codesign
+
+        # - name: Release by fastlane
+        #   env:
+        #     APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+        #     APPLE_API_ISSUER_ID: ${{ secrets.APPLE_API_ISSUER_ID }}
+        #     MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #     MATCH_REPOSITORY_ACCESS_TOKEN: ${{ secrets.MATCH_REPOSITORY_ACCESS_TOKEN }}
+        #     MATCH_REPOSITORY_USERNAME: ${{ secrets.MATCH_REPOSITORY_USERNAME }}
+        #   run: |
+        #     cd ios
+        #     bundle install
+        #     fastlane release
 
         - name: Create apk file
           run: |
             echo -n "$ANDROID_KEYSTORE_BASE64" | base64 --decode --output ./android/release.keystore
             export KEYSTORE_PASSWORD="${{ secrets.ANDROID_KEYSTORE_PASSWORD }}"
             export KEY_ALIAS="${{ secrets.ANDROID_KEY_ALIAS }}"
-            export KEY_PASSWORD="${{ secrets.ANDROID_KEY_PASSWORD }}"            
+            export KEY_PASSWORD="${{ secrets.ANDROID_KEY_PASSWORD }}"
             flutter build apk --no-tree-shake-icons --release
 
         - name: Create tag and release note
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: |
-            gh release create v$BUMP_VERSION --generate-notes --draft ./build/app/outputs/flutter-apk/app-release.apk
+            gh release create test --generate-notes --draft ./build/app/outputs/flutter-apk/app-release.apk
