--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,12 @@ android {
             keyPassword System.getenv('ANDROID_KEY_PASSWORD')
         }
     }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 flutter {
