--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,12 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "miria-${versionName}.apk"
+        }
+    }
 }
 
 flutter {
