--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   json_annotation: ^4.8.0
   shared_preferences: ^2.1.0
   badges: ^3.1.1
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^8.1.0
+  flutter_secure_storage_linux: ^1.2.0
   google_fonts: ^4.0.4
   uuid: ^3.0.7
   file_picker: ^5.3.0
