--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,7 +129,7 @@ jobs:
 
       - name: Create AppImage file
         run: |
-          sudo apt install libsecret-1-dev
+          sudo apt install libsecret-1-dev clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           flutter pub global activate flutter_distributor
           flutter_distributor package --platform linux --targets appimage
           mv ./dist/$VERSION/miria-$VERSION-linux.AppImage ./dist/$VERSION/miria-$VERSION-amd64.AppImage
