--- a/.github/workflows/snap_deploy.yml
+++ b/.github/workflows/snap_deploy.yml
@@ -1,6 +1,9 @@
 name: デプロイ(snap)
 run-name: Building Miria's Snap package
-on: [workflow_dispatch]
+on:
+  release:
+    types: [published]
+
 jobs:
   build:
     name: ビルド（Snap）
@@ -18,11 +21,11 @@ jobs:
           pwd
           echo "VERSION=$(cat pubspec.yaml | grep version | cut -d ' ' -f 2)" >> $GITHUB_ENV
 
-      - name: Create release
+      - name: Upload snap file
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create v$VERSION --generate-notes --draft ${{ steps.snapcraft.outputs.snap }}
+          gh release upload v$VERSION ${{ steps.snapcraft.outputs.snap }}
 
       # https://github.com/snapcore/action-publish
       # 以下をコメントアウトを解除することでSnap Storeへアップロードすることが可能です。
