--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,13 @@ dependencies:
   flutter_html: 3.0.0-alpha.6
   flutter_riverpod: ^2.3.2
   misskey_dart:
-    git: https://github.com/shiosyakeyakini-info/misskey_dart.git
+    git:
+      url: https://github.com/poppingmoon/misskey_dart.git
+      ref: next
   mfm_renderer:
-    git: https://github.com/shiosyakeyakini-info/mfm_renderer.git
+    git:
+      url: https://github.com/poppingmoon/mfm_renderer.git
+      ref: next
   tuple: ^2.0.1
   path_provider: ^2.0.14
   dio: ^5.1.1
