--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dev_dependencies:
   mockito: ^5.4.2
   cider: ^0.2.3
   flutter_distributor: ^0.3.4
+  lint: ^2.1.2
 
 flutter:
   uses-material-design: true
