--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.2
   cider: ^0.2.3
+  lint: ^2.1.2
 
 flutter:
   uses-material-design: true
