--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,3 +6,7 @@ analyzer:
   exclude:
     - /**/*.freezed.dart
     - /**/*.g.dart
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
