--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,8 +4,8 @@ linter:
 
 analyzer:
   exclude:
-    - /**/*.freezed.dart
-    - /**/*.g.dart
+    - "**/*.freezed.dart"
+    - "**/*.g.dart"
   language:
     strict-casts: true
     strict-inference: true
