--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,39 +5,30 @@ summary: Misskey Client for Mobile App # 79文字まで。
 description: |
   Miriaは分散型SNS「Misskey」のクライアントアプリです。
 
-  ＊機能＊
+  機能
 
-  ・タイムラインの閲覧やノートの投稿、「アンテナ」「チャンネル」「みつける」などの基本的な機能を利用することができます。
-
-  ・複数アカウント、複数サーバーに対応しています。
-
-  　※2個目以降のアカウントを追加したあとは、アカウントに紐づくタブを追加する必要があります。
-
-  ・一部のMFMに対応しています。
-
-  ・タブにカスタム絵文字を設定することができます。
-
-  ・リアクションピッカーの精度が高く、ひらがなでも検索しやすくなっています。
-
-  ・投稿欄でMFMの入力補完をすることができ、MFMの構文やカスタム絵文字をスムーズに入力することができます。
-
-  ・配色を複数のパターンから切り替えることができます。
+  * タイムラインの閲覧やノートの投稿、「アンテナ」「チャンネル」「みつける」などの基本的な機能を利用することができます。
+  * 複数アカウント、複数サーバーに対応しています。(※2個目以降のアカウントを追加したあとは、アカウントに紐づくタブを追加する必要があります。)
+  * 一部のMFMに対応しています。
+  * タブにカスタム絵文字を設定することができます。
+  * リアクションピッカーの精度が高く、ひらがなでも検索しやすくなっています。
+  * 投稿欄でMFMの入力補完をすることができ、MFMの構文やカスタム絵文字をスムーズに入力することができます。
+  * 配色を複数のパターンから切り替えることができます。
 
   制限事項
 
-  ・このアプリケーションは新規登録およびアカウント削除の機能を提供していません。新規登録や削除が必要な場合、登録や削除に必要な要件をそれぞれのサーバーへご確認ください。
-
-  ・このアプリケーションはサーバーを提供していません。このアプリと一緒に特定のサーバーを付随して提供していないので、このアプリ単独で利用することはできません。
-
-  ・このアプリはMisskey v12以前のバージョンや、Firefish, Calckeyなどのフォークされたアプリケーションに対応していません。
+  * このアプリケーションは新規登録およびアカウント削除の機能を提供していません。新規登録や削除が必要な場合、登録や削除に必要な要件をそれぞれのサーバーへご確認ください。
+  * このアプリケーションはサーバーを提供していません。このアプリと一緒に特定のサーバーを付随して提供していないので、このアプリ単独で利用することはできません。
+  * このアプリはMisskey v12以前のバージョンや、Firefish, Calckeyなどのフォークされたアプリケーションに対応していません。
 
   注意：インストール後、パスワード管理サービスにアクセスできるように、下記のコマンドを実行してください。
 
-  sudo snap connect miria:password-manager-service
+  `sudo snap connect miria:password-manager-service`
 license: AGPL-3.0
 website: https://shiosyakeyakini.info/miria_web/index.html
 source-code: https://github.com/shiosyakeyakini-info/miria
 issues: https://github.com/shiosyakeyakini-info/miria/issues
+donation: https://shiosyakeyakini.fanbox.cc
 icon: assets/images/icon.png
 adopt-info: miria
 base: core18 # the base snap is the execution environment for this snap
@@ -56,6 +47,8 @@ apps:
       - password-manager-service
       - home
       - removable-media
+      - audio-playback
+      - camera
 
 parts:
   miria:
