--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -40,7 +40,7 @@ jobs:
       - run: flutter pub get
 
       - name: Bump up version
-        run: echo "VERSION=$(dart run cider bump pre --keep-build)" >> $GITHUB_ENV
+        run: echo "VERSION=$(dart run cider bump build)" >> $GITHUB_ENV
 
       - run: |
           git config --local user.name $GIT_USER_NAME
