--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   colorfilter_generator: ^0.0.8
   matrix2d: ^1.0.4
   twemoji_v2: ^0.5.3
+  webview_flutter: ^4.3.0
+  webview_flutter_android: ^3.12.0
+  webview_flutter_wkwebview: ^3.9.0
 
 dependency_overrides:
   image_editor:
