--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   matrix2d: ^1.0.4
   twemoji_v2: ^0.5.3
   flutter_image_compress: ^2.0.4
+  mime: ^1.0.4
 
 dependency_overrides:
   image_editor:
