--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   media_kit_video: ^1.2.1
   media_kit_libs_video: ^1.0.3
   flutter_colorpicker: ^1.0.3
+  mime: ^1.0.4
 
 dependency_overrides:
   image_editor:
