--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   matrix2d: ^1.0.4
   twemoji_v2: ^0.5.3
   flutter_image_compress: ^2.0.4
+  media_kit: ^1.1.8+2
+  media_kit_video: ^1.2.1
+  media_kit_libs_video: ^1.0.3
 
 dependency_overrides:
   image_editor:
