--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -31,17 +31,15 @@ issues: https://github.com/shiosyakeyakini-info/miria/issues
 donation: https://shiosyakeyakini.fanbox.cc
 icon: assets/images/icon.png
 adopt-info: miria
-base: core18 # the base snap is the execution environment for this snap
+base: core22
 grade: stable
 confinement: strict 
-architectures:
-  - amd64
-  - arm64
+architectures: amd64
 
 apps:
   miria:
-    command: bin/miria
-    extensions: [flutter-stable]
+    command: miria
+    extensions: [gnome]
     plugs:
       - network
       - password-manager-service
@@ -56,9 +54,8 @@ parts:
     source: .
     plugin: flutter
     override-pull: |
-      snapcraftctl pull
-      VERSION=$(flutter pub run cider version)
-      snapcraftctl set-version $VERSION
+      craftctl default
+      craftctl set version=$(cat pubspec.yaml | grep "version[:]" | cut -d ' ' -f 2)
     flutter-target: lib/main.dart
     build-packages:
       - libsecret-1-dev
@@ -68,7 +65,15 @@ parts:
       - libmpv1
   # Integrate custom dialogs in your snap - doc - snapcraft.io
   # https://forum.snapcraft.io/t/integrate-custom-dialogs-in-your-snap/10825
-  zenity-integration:
+  zenity:
     plugin: nil
-    stage-snaps:
-      - zenity-integration
+    stage-packages:
+      - zenity
+    prime:
+      - usr/bin/zenity
+      - usr/share/zenity/*
+
+layout:
+  # Fix resource relocation problem of zenity part
+  /usr/share/zenity:
+    symlink: $SNAP/usr/share/zenity
