core18からcore22へ変更

--- a/snap/gui/miria.desktop
+++ b/snap/gui/miria.desktop
@@ -4,7 +4,7 @@ Name=Miria
 GenericName=Miria
 Type=Application
 Exec=miria
-Icon=${SNAP}/bin/data/flutter_assets/assets/images/icon.png
+Icon=${SNAP}/meta/gui/icon.png
 Comment=Misskey client app for mobile (Linux build)
 Comment[ja]=モバイル向けのMisskeyクライアントアプリ（Linux向けビルド）
 Keywords=Misskey;Miria;みりあ
