--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_secure_storage: ^8.1.0
   flutter_svg: ^2.0.6
   freezed_annotation: ^2.2.0
+  google_fonts: ^4.0.4
   highlighting: ^0.9.0+11.8.0
   image_editor: ^1.3.0
   image_gallery_saver: ^2.0.3
