--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   fl_chart: ^0.62.0
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.1
   flutter_highlighting: ^0.9.0+11.8.0
   flutter_html: 3.0.0-alpha.6
   flutter_image_compress: ^2.0.4
@@ -55,6 +56,7 @@ dependencies:
   scrollable_positioned_list: ^0.3.6
   share_plus: ^7.0.2
   shared_preferences: ^2.1.0
+  stack_trace: ^1.11.0
   tuple: ^2.0.1
   twemoji_v2: ^0.5.3
   url_launcher: ^6.1.10
@@ -91,6 +93,8 @@ dev_dependencies:
   json_serializable: ^6.6.1
   lint: ^2.1.2
   mockito: ^5.4.2
+  plugin_platform_interface: ^2.1.6
+  url_launcher_platform_interface: ^2.2.0
 
 flutter:
   uses-material-design: true
