--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
       ref: c930ea393f33848ab8102817d498f87b866293af
   mime: ^1.0.4
   misskey_dart:
-    git: https://github.com/shiosyakeyakini-info/misskey_dart.git
+    git:
+      url: https://github.com/poppingmoon/misskey_dart.git
+      ref: b58beb73d513261c5402c8a383d5fe541bfbe9ec
   package_info_plus: ^4.0.0
   path: ^1.8.2
   path_provider: ^2.0.14
