--- a/.github/workflows/linux_deploy.yml
+++ b/.github/workflows/linux_deploy.yml
@@ -1,27 +1,30 @@
 name: デプロイ(Linux)
-on: [workflow_dispatch]
-permissions:  
+on:
+  workflow_dispatch:
+  release:
+    types: [published]
+permissions:
   contents: write
-jobs: 
-  build_for_linux:  
+jobs:
+  build_for_linux:
     name: Linux用ビルド
     runs-on:  ubuntu-latest
-    steps:  
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install Flutter Develop dependencies
         run:  sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-          
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
-        with: 
+        with:
           channel:  'stable'
           cache:  true
 
       - name: Cache pubspec dependencies
         uses: actions/cache@v3
-        with: 
+        with:
           path: |
             ${{ env.FLUTTER_HOME }}/.pub-cache
             **/.packages
@@ -57,10 +60,10 @@ jobs:
           mv ./dist/$BUMP_VERSION/miria-$BUMP_VERSION-linux.AppImage ./dist/$BUMP_VERSION/miria-$BUMP_VERSION-amd64.AppImage
 
       - name: Upload artifact to release (AppImage)
-        env:  
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  gh release upload v$VERSION ./dist/$BUMP_VERSION/miria-$BUMP_VERSION-amd64.AppImage
-  
+
       - name: Compress App
         run:  |
           cd build/linux/x64/release/bundle
@@ -68,12 +71,12 @@ jobs:
 
       # - name: Upload artifact
       #   uses: actions/upload-artifacts@v3
-      #   with: 
+      #   with:
       #     name: linux-x86_64
       #     path: build/linux/x64/release/bundle/miria-$VERSION-x86_64.tar.gz
 
       - name: Upload artifact to release
-        env:  
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  gh release upload v$VERSION ./build/linux/x64/release/bundle/miria-$VERSION-x86_64.tar.gz
 
