--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   shared_preferences: ^2.1.0
   badges: ^3.1.1
   flutter_secure_storage: ^8.0.0
-  google_fonts: ^4.0.4
+  google_fonts: ^5.1.0
   uuid: ^3.0.7
   file_picker: ^5.3.0
   package_info_plus: ^4.0.0
@@ -63,6 +63,7 @@ dependencies:
   webview_flutter: ^4.3.0
   webview_flutter_android: ^3.12.0
   webview_flutter_wkwebview: ^3.9.0
+  flutter_font_picker: ^1.4.0
 
 dependency_overrides:
   image_editor:
