--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -52,6 +52,8 @@ apps:
       # 以下はユーザーが接続を許可するまで使用不可（password-manager-serviceは必須）
       - removable-media
       - password-manager-service
+    environment:
+      LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/blas:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/lapack:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/gio/modules"
 
 parts:
   miria:
@@ -79,8 +81,3 @@ parts:
     prime:
       - usr/bin/zenity
       - usr/share/zenity/*
-
-layout:
-  # zenity partのリソース再配置問題修正のため
-  /usr/share/zenity:
-    symlink: $SNAP/usr/share/zenity
