詳細の編集とzenity partsの統合、不要なlayoutの削除

--- a/snap/gui/miria.desktop
+++ b/snap/gui/miria.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Name=Miria
-GenericName=Miria
+GenericName=Misskey Client App
+GenericName[ja]=Misskeyクライアントアプリ
 Type=Application
 Exec=miria
 Icon=${SNAP}/meta/gui/miria.png
